--- a/app/src/main/res/layout/activity_add_todo.xml
+++ b/app/src/main/res/layout/activity_add_todo.xml
@@ -25,7 +25,14 @@
         android:layout_margin="5dp"
         android:hint="Category"
         android:ems="10"/>
-
+<TextView
+    android:layout_width="match_parent"
+    android:layout_height="35dp"
+    android:lines="1"
+    android:layout_margin="5dp"
+    android:id="@+id/time"
+    android:textAlignment="center"
+    tools:text="12.30 pm 30 april"/>
 
     <LinearLayout
         android:id="@+id/date_layout"
