--- a/app/src/main/res/layout/child_list.xml
+++ b/app/src/main/res/layout/child_list.xml
@@ -1,22 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="vertical" android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:padding="4dp"
-    android:layout_margin="5dp">
+    android:layout_margin="5dp"
+    android:background="#f7f2fc"
+    >
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingHorizontal="4dp"
         android:id="@+id/child_description"
-        android:paddingLeft="?android:expandableListPreferredChildPaddingLeft"/>
+        android:paddingStart="50dp"
+        />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingHorizontal="4dp"
         android:id="@+id/child_deadline"
-        android:paddingLeft="?android:expandableListPreferredChildPaddingLeft"/>
+        android:paddingStart="50dp"
+        />
 
 </LinearLayout>
