--- a/app/src/main/res/drawable/button_bg.xml
+++ b/app/src/main/res/drawable/button_bg.xml
@@ -4,8 +4,7 @@
         android:height="60dp"
         android:width="60dp"/>
     <gradient
-        android:endColor="#CE93D8"
-        android:startColor="#F8BBD0" />
-    <stroke
-        android:color="@color/colorAccent"/>
+        android:endColor="#ffffff"
+        android:startColor="#f8fcff" />
+
 </shape>
