--- a/app/src/main/res/layout/auto_complete.xml
+++ b/app/src/main/res/layout/auto_complete.xml
@@ -1,14 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="wrap_content"
+    android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="4dp"
     android:layout_margin="5dp"
     android:textSize="14dp">
-
-    <!--<TextView-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:id="@+id/completions"/>-->
-
 </TextView>
