--- a/app/src/main/res/layout/child_list.xml
+++ b/app/src/main/res/layout/child_list.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="wrap_content"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:padding="4dp"
     android:layout_margin="5dp"
@@ -16,11 +16,27 @@
         />
 
     <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/child_category"
+        android:paddingStart="50dp"
+        android:layout_below="@id/child_description"/>
+
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingHorizontal="4dp"
         android:id="@+id/child_deadline"
         android:paddingStart="50dp"
+        android:layout_below="@id/child_category"
         />
+    <Button
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:id="@+id/done"
+        android:layout_alignEnd="@id/child_category"
+        android:layout_alignParentEnd="true"
+        android:layout_centerVertical="true"
+        android:layout_margin="5dp"/>
 
-</LinearLayout>
+</RelativeLayout>
